--- a/.github/workflows/practice_1.yaml
+++ b/.github/workflows/practice_1.yaml
@@ -5,7 +5,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - name: get_code
-          run: actions/checkout@v3
+          uses: actions/checkout@v3
         - name: install_dependencies
           run: npm ci
         - name: lint
