--- a/.github/workflows/practice_2.yaml
+++ b/.github/workflows/practice_2.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get_code
-        run: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: install_dependencies
         run: npm ci
       - name: lint_job
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: get_code
-        run: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: install_dependencies
         run: npm ci
       - name: test_job
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get_code
-        run: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: install_dependencies
         run: npm ci
       - name: build_code
